
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct w9968cf_device {int mirror; int backlight; int lightfreq; int bandfilt; int auto_exp; int auto_brt; } ;


 int OVCAMCHIP_CID_AUTOBRIGHT ;
 int OVCAMCHIP_CID_AUTOEXP ;
 int OVCAMCHIP_CID_BACKLIGHT ;
 int OVCAMCHIP_CID_BANDFILT ;
 int OVCAMCHIP_CID_FREQ ;
 int OVCAMCHIP_CID_MIRROR ;
 int w9968cf_sensor_set_control (struct w9968cf_device*,int ,int ) ;

__attribute__((used)) static int w9968cf_sensor_update_settings(struct w9968cf_device* cam)
{
 int err = 0;


 err = w9968cf_sensor_set_control(cam, OVCAMCHIP_CID_AUTOBRIGHT,
      cam->auto_brt);
 if (err)
  return err;


 err = w9968cf_sensor_set_control(cam, OVCAMCHIP_CID_AUTOEXP,
      cam->auto_exp);
 if (err)
  return err;


 err = w9968cf_sensor_set_control(cam, OVCAMCHIP_CID_BANDFILT,
      cam->bandfilt);
 if (err)
  return err;


 err = w9968cf_sensor_set_control(cam, OVCAMCHIP_CID_FREQ,
      cam->lightfreq);
 if (err)
  return err;


 err = w9968cf_sensor_set_control(cam, OVCAMCHIP_CID_BACKLIGHT,
      cam->backlight);
 if (err)
  return err;


 err = w9968cf_sensor_set_control(cam, OVCAMCHIP_CID_MIRROR,
      cam->mirror);
 if (err)
  return err;

 return 0;
}
